# Fierro

single-node/scripts/: build-fierro.sh  cmake_build.sh  setup-env.sh
single-node/src/: CMakeLists.txt
single-node/src/Explicit-Lagrange-Kokkos/MFHO_solver/: CMakeLists.txt  driver.cpp
single-node/src/Explicit-Lagrange-Kokkos/MFHO_solver/include/: mesh.h  mfho.hpp  node_combination.h
